--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@
 </ul>
 </li>
 <li class="dropdown"><a href="crop_form">Crop</a></li>
-<li class="dropdown"><a href="j">Fertilizer</a></li>
+<li class="dropdown"><a href="fertilizer_form">Fertilizer</a></li>
 <li class="dropdown"><a href="j">Disease </a></li>
 <!-- <li>
 <a href="about.html">About</a>
