--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
 </li>
 <li class="dropdown"><a href="crop_form">Crop</a></li>
 <li class="dropdown"><a href="fertilizer_form">Fertilizer</a></li>
-<li class="dropdown"><a href="j">Disease </a></li>
+<li class="dropdown"><a href="plant_disease_form">Disease </a></li>
 <!-- <li>
 <a href="about.html">About</a>
 </li> -->
