--- a/templates/plant_disease_form.html
+++ b/templates/plant_disease_form.html
@@ -1,15 +1,6 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <style>
-            html body {
-              background-color: rgb(206, 206, 228);
-            }
-          </style>
-          
-    </head>
-    <body>
-     
+      {% extends 'base.html' %}
+      {% load static %}
+      {% block content %}
             <h2 style="text-align: center; margin: 0px; color: black">
               <b>Find out which disease has been caught by your plant</b>
             </h2>
@@ -53,6 +44,7 @@
 
     </body>
 </html>
+{% endblock content %}
 
 
 
