--- a/templates/fertilizer_form.html
+++ b/templates/fertilizer_form.html
@@ -1,165 +1,6 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Contact V2</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="icon"
-      type="image/png"
-      href="{% static 'images_form/icons/favicon.ico' %}"
-    />
-    <!--===============================================================================================-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{% static 'vendor_form/bootstrap/css/bootstrap.min.css' %}"
-    />
-    <!--===============================================================================================-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{% static 'fonts_form/font-awesome-4.7.0/css/font-awesome.min.css' %}"
-    />
-    <!--===============================================================================================-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{% static 'vendor_form/animate/animate.css' %}"
-    />
-    <!--===============================================================================================-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{% static 'vendor_form/css-hamburgers/hamburgers.min.css' %}"
-    />
-    <!--===============================================================================================-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{% static 'vendor_form/select2/select2.min.css' %}"
-    />
-    <!--===============================================================================================-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{% static 'css_form/util.css' %}"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{% static 'css_form/main.css' %}"
-    />
-    <!--===============================================================================================-->
-    <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Agro-Predict</title>
-
-<link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/favicons/apple-touch-icon.png' %}">
-<link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicons/favicon-32x32.png' %}">
-<link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicons/favicon-16x16.png' %}">
-<link rel="manifest" href="{% static 'images/favicons/site.webmanifest' %}">
-<meta name="description" content="Agrikon HTML Template For Agriculture Farm & Farmers">
-
-<link rel="preconnect" href="https://fonts.gstatic.com/">
-<link href="https://fonts.googleapis.com/css2?family=Handlee&amp;family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet">
-<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-<link rel="stylesheet" href="{% static 'css/fontawesome-all.min.css' %}">
-<link rel="stylesheet" href="{% static 'css/swiper.min.css' %}">
-<link rel="stylesheet" href="{% static 'css/animate.min.css' %}">
-<link rel="stylesheet" href="{% static 'css/odometer.min.css' %}">
-<link rel="stylesheet" href="{% static 'css/jarallax.css' %}">
-<link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">
-<link rel="stylesheet" href="{% static 'css/bootstrap-select.min.css' %}">
-<link rel="stylesheet" href="{% static 'css/agrikon-icons.css' %}">
-<link rel="stylesheet" href="{% static 'css/nouislider.min.css' %}">
-<link rel="stylesheet" href="{% static 'css/nouislider.pips.css' %}">
-
-<link rel="stylesheet" href="{% static 'css/main.css' %}">
-  </head>
-  <body>
-    <header class="main-header">
-      <!-- <div class="topbar">
-      <div class="container">
-      <div class="topbar__left">
-      <div class="topbar__social">
-      <a href="#" class="fab fa-facebook-square"></a>
-      <a href="#" class="fab fa-twitter"></a>
-      <a href="#" class="fab fa-pinterest-p"></a>
-      <a href="#" class="fab fa-instagram"></a>
-      </div>
-      <p>Welcome to Agriculture HTML Template</p>
-      </div>
-      <div class="topbar__right">
-      <a href="#"><i class="agrikon-icon-email"></i><span class="__cf_email__" data-cfemail="4a242f2f2e222f263a0a2925273a2b243364292527">[email&#160;protected]</span></a>
-      <a href="#"><i class="agrikon-icon-clock"></i>Mon - Sat 8:00 - 6:30, Sunday - CLOSED</a>
-      </div>
-      </div>
-      </div> -->
-      <nav class="main-menu">
-      <div class="container">
-      <div class="logo-box">
-      <a href="index-2.html" aria-label="logo image">
-          <img src="{% static 'images/loader.png' %}" width="50" alt="">
-          <strong style="color:black ;font-size: larger;"> AgroPredict</strong>
-      </a>
-      <span class="fa fa-bars mobile-nav__toggler"></span>
-      </div>
-      <ul class="main-menu__list">
-      <li class="dropdown">
-      <a href="index-2.html">Home</a>
-      <ul>
-      <!-- <li>
-      <a href="index-2.html">Home One</a>
-      </li>
-      <li><a href="index-3.html">Home Two</a></li> -->
-      <!-- <li class="dropdown">
-      <a href="#">Header Styles</a>
-      <ul>
-      <li><a href="index-2.html">Header One</a></li>
-      <li><a href="index-3.html">Header Two</a></li>
-      </ul>
-      </li> -->
-      </ul>
-      </li>
-      <li class="dropdown"><a href="crop_form">Crop</a></li>
-      <li class="dropdown"><a href="j">Fertilizer</a></li>
-      <li class="dropdown"><a href="j">Disease </a></li>
-      <!-- <li>
-      <a href="about.html">About</a>
-      </li> -->
-      <li class="dropdown"><a href="services">Features</a>
-      <!-- <ul>
-      <li><a href="services.html"></a></li>
-      <li><a href="service-details.html">Service Details</a></li>
-      <li><a href="contact.html"></a></li>
-      </ul> -->
-      </li>
-      <li class="dropdown"><a href="j">Contact</a></li>
-      <li class="dropdown"><a href="blog.html">News</a>
-      <ul>
-      <li><a href="blog.html">News</a></li>
-      <li><a href="blog-details.html">News Details</a></li>
-      </ul>
-      </li>
-      </ul>
-      
-      <div class="main-header__info">
-      <!-- <a href="#" class="search-toggler main-header__search-btn"><i class="agrikon-icon-magnifying-glass"></i></a>
-      <a class="main-header__cart-btn" href="#"><i class="agrikon-icon-shopping-cart"></i></a> -->
-      <a href="tel:92-666-888-0000" class="main-header__info-phone">
-      <i class="agrikon-icon-phone-call"></i>
-      <span class="main-header__info-phone-content">
-      <span class="main-header__info-phone-text">Call if any query</span>
-      <span class="main-header__info-phone-title">91 000 000 0000</span>
-      </span>
-      </a>
-      </div>
-      </div>
-      </nav>
-      
-      </header>
+{% block content %}
     <div
       class="bg-contact2"
       style="background-image: url({% static 'images_form/bg-03.jpg'%}) ; "
@@ -262,5 +103,7 @@
 
       gtag("config", "UA-23581568-13");
     </script>
+  
   </body>
 </html>
+{% endblock content %}
