--- a/templates/index.html
+++ b/templates/index.html
@@ -1,122 +1,6 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-
-<!-- Mirrored from ninetheme.com/themes/html-templates/agrikon/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 10 Aug 2021 16:54:14 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Agro-Predict</title>
-
-<link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/favicons/apple-touch-icon.png' %}">
-<link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicons/favicon-32x32.png' %}">
-<link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicons/favicon-16x16.png' %}">
-<link rel="manifest" href="{% static 'images/favicons/site.webmanifest' %}">
-<meta name="description" content="Agrikon HTML Template For Agriculture Farm & Farmers">
-
-<link rel="preconnect" href="https://fonts.gstatic.com/">
-<link href="https://fonts.googleapis.com/css2?family=Handlee&amp;family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet">
-<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-<link rel="stylesheet" href="{% static 'css/fontawesome-all.min.css' %}">
-<link rel="stylesheet" href="{% static 'css/swiper.min.css' %}">
-<link rel="stylesheet" href="{% static 'css/animate.min.css' %}">
-<link rel="stylesheet" href="{% static 'css/odometer.min.css' %}">
-<link rel="stylesheet" href="{% static 'css/jarallax.css' %}">
-<link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">
-<link rel="stylesheet" href="{% static 'css/bootstrap-select.min.css' %}">
-<link rel="stylesheet" href="{% static 'css/agrikon-icons.css' %}">
-<link rel="stylesheet" href="{% static 'css/nouislider.min.css' %}">
-<link rel="stylesheet" href="{% static 'css/nouislider.pips.css' %}">
-
-<link rel="stylesheet" href="{% static 'css/main.css' %}">
-</head>
-<body>
-<!-- <div class="preloader">
-<img class="preloader__image" width="55" src="{% static 'images/loader.png' %}" alt="">
-</div> -->
-<div class="page-wrapper">
-<header class="main-header">
-<!-- <div class="topbar">
-<div class="container">
-<div class="topbar__left">
-<div class="topbar__social">
-<a href="#" class="fab fa-facebook-square"></a>
-<a href="#" class="fab fa-twitter"></a>
-<a href="#" class="fab fa-pinterest-p"></a>
-<a href="#" class="fab fa-instagram"></a>
-</div>
-<p>Welcome to Agriculture HTML Template</p>
-</div>
-<div class="topbar__right">
-<a href="#"><i class="agrikon-icon-email"></i><span class="__cf_email__" data-cfemail="4a242f2f2e222f263a0a2925273a2b243364292527">[email&#160;protected]</span></a>
-<a href="#"><i class="agrikon-icon-clock"></i>Mon - Sat 8:00 - 6:30, Sunday - CLOSED</a>
-</div>
-</div>
-</div> -->
-<nav class="main-menu">
-<div class="container">
-<div class="logo-box">
-<a href="index-2.html" aria-label="logo image">
-    <img src="{% static 'images/loader.png' %}" width="50" alt="">
-    <strong style="color:black ;font-size: larger;"> AgroPredict</strong>
-</a>
-<span class="fa fa-bars mobile-nav__toggler"></span>
-</div>
-<ul class="main-menu__list">
-<li class="dropdown">
-<a href="index-2.html">Home</a>
-<ul>
-<!-- <li>
-<a href="index-2.html">Home One</a>
-</li>
-<li><a href="index-3.html">Home Two</a></li> -->
-<!-- <li class="dropdown">
-<a href="#">Header Styles</a>
-<ul>
-<li><a href="index-2.html">Header One</a></li>
-<li><a href="index-3.html">Header Two</a></li>
-</ul>
-</li> -->
-</ul>
-</li>
-<li class="dropdown"><a href="crop_form">Crop</a></li>
-<li class="dropdown"><a href="fertilizer_form">Fertilizer</a></li>
-<li class="dropdown"><a href="plant_disease_form">Disease </a></li>
-<!-- <li>
-<a href="about.html">About</a>
-</li> -->
-<li class="dropdown"><a href="services">Features</a>
-<!-- <ul>
-<li><a href="services.html"></a></li>
-<li><a href="service-details.html">Service Details</a></li>
-<li><a href="contact.html"></a></li>
-</ul> -->
-</li>
-<li class="dropdown"><a href="j">Contact</a></li>
-<li class="dropdown"><a href="blog.html">News</a>
-<ul>
-<li><a href="blog.html">News</a></li>
-<li><a href="blog-details.html">News Details</a></li>
-</ul>
-</li>
-</ul>
-
-<div class="main-header__info">
-<!-- <a href="#" class="search-toggler main-header__search-btn"><i class="agrikon-icon-magnifying-glass"></i></a>
-<a class="main-header__cart-btn" href="#"><i class="agrikon-icon-shopping-cart"></i></a> -->
-<a href="tel:92-666-888-0000" class="main-header__info-phone">
-<i class="agrikon-icon-phone-call"></i>
-<span class="main-header__info-phone-content">
-<span class="main-header__info-phone-text">Call if any query</span>
-<span class="main-header__info-phone-title">91 000 000 0000</span>
-</span>
-</a>
-</div>
-</div>
-</nav>
-
-</header>
+{% block content %}
 <div class="stricky-header stricked-menu main-menu">
 <div class="sticky-header__content"></div>
 </div>
@@ -770,102 +654,14 @@ ligula lacus dignissim mi quis simply neque.</p> -->
 </div>
 </div>
 </div> -->
-<footer class="site-footer">
-<img src="{% static 'images/icons/footer-bg-icon-1.png' %}" class="site-footer__shape-1" alt="">
-<img src="{% static 'images/icons/footer-bg-icon-2.png' %}" class="site-footer__shape-2" alt="">
-<div class="container">
-<div class="row">
-<div class="col-sm-12 col-md-6 col-lg-6 col-xl-4">
-<div class="footer-widget">
-<a href="index-2.html" class="footer-widget__Logo">
-<img src="{% static 'images/loader.png' %}" width="50" alt="">
-</a>
-<p>SUBSCRIBE FOR NEWSLETTER
-</p>
-<form action="#" data-url="YOUR_MAILCHIMP_URL" class="mc-form">
-<input type="email" name="EMAIL" placeholder="Email Address">
-<button type="submit"><i class="agrikon-icon-right-arrow"></i></button>
-</form>
-<div class="mc-form__response"></div>
-<div class="footer__social">
-<a href="#" class="fab fa-facebook-square"></a>
-<a href="#" class="fab fa-twitter"></a>
-<!-- <a href="#" class="fab fa-pinterest-p"></a> -->
-<a href="#" class="fab fa-instagram"></a>
-</div>
-</div>
-</div>
-<!-- <div class="col-sm-12 col-md-6 col-lg-6 col-xl-2">
-<div class="footer-widget footer-widget__links-widget">
-<h3 class="footer-widget__title">Links</h3>
-<ul class="list-unstyled footer-widget__links">
-<li><a href="#">Our Projects</a></li>
-<li><a href="#">About us</a></li>
-<li><a href="#">New Campaign</a></li>
-<li><a href="#">Upcoming Events</a></li>
-<li><a href="#">Volunteers</a></li>
-</ul>
-</div>
-</div> -->
-<div class="col-sm-12 col-md-6 col-lg-6 col-xl-4">
-<div class="footer-widget">
-<h3 class="footer-widget__title">News</h3>
-<ul class="list-unstyled footer-widget__post">
-<li>
-<img src="{% static 'images/resources/footer-post-1.png' %}" alt="">
-<div class="footer-widget__post-content">
-<span>Aug 12, 2021</span>
-<h4><a href="blog-details.html">How to grow vagetables in the forms</a></h4>
-</div>
-</li>
-<li>
-<img src="{% static 'images/resources/footer-post-2.png' %}" alt="">
-<div class="footer-widget__post-content">
-<span>Aug 12, 2021</span>
-<h4><a href="blog-details.html">How to grow vagetables in the forms</a></h4>
-</div>
-</li>
-</ul>
-</div>
-</div>
-<div class="col-sm-12 col-md-6 col-lg-6 col-xl-4">
-<h3 class="footer-widget__title">Contact</h3>
-<ul class="list-unstyled footer-widget__contact">
-<li>
-<i class="agrikon-icon-telephone"></i>
-<a href="tel:666-888-0000">999 444 0000</a>
-</li>
-<li>
-<i class="agrikon-icon-email"></i>
-<a href="#"><span class="__cf_email__" data-cfemail="d3bdb6b6b7bbb6bfa393b0bcbea3b2bdaafdb0bcbe">[email&#160;protected]</span></a>
-</li>
-<li>
-<i class="agrikon-icon-pin"></i>
-<a href="#">Mumbai, India</a>
-</li>
-</ul>
-</div>
-</div>
-</div>
-</footer>
-<div class="bottom-footer">
-<div class="container">
-<p>© Copyright 2020 by Company.com</p>
-<div class="bottom-footer__links">
-<a href="#">Terms & Conditions</a>
-<a href="#">Privacy Policy</a>
-<a href="#">Sitemap</a>
-</div>
-</div>
-</div>
-</div>
+
 <div class="mobile-nav__wrapper">
 <div class="mobile-nav__overlay mobile-nav__toggler"></div>
 
 <div class="mobile-nav__content">
 <span class="mobile-nav__close mobile-nav__toggler"><i class="far fa-times"></i></span>
 <div class="logo-box">
-<a href="index-2.html" aria-label="logo image"><img src="{% static 'images/loader.png' %}" width="50" alt="" /></a>
+<a href="index" aria-label="logo image"><img src="{% static 'images/loader.png' %}" width="50" alt="" /></a>
 </div>
 
 <div class="mobile-nav__container"></div>
@@ -938,3 +734,4 @@ ligula lacus dignissim mi quis simply neque.</p> -->
 
 <!-- Mirrored from ninetheme.com/themes/html-templates/agrikon/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 10 Aug 2021 16:54:37 GMT -->
 </html>
+{% endblock content %}
