--- a/templates/plant_disease_form_result.html
+++ b/templates/plant_disease_form_result.html
@@ -1,1 +1,5 @@
-<h1>{{ prediction }}</h1>
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
+<h1> {{prediction}}</h1>
+{% endblock content %}
