--- a/templates/crop_form_result.html
+++ b/templates/crop_form_result.html
@@ -1,5 +1,12 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<h1> {{prediction}}</h1>
+<h1 class="text-center" style="margin-top:5%;">
+    <b>You should grow <span class="gold-text"><i> {{ prediction }} </i></span>in your farm</b>
+    <br><br>
+    <!-- {{pred}} -->
+    <!-- <img src="{% static '{{pred}}' %}" width="780px" height="450px" alt={{prediction}}> -->
+    {{img}}
+</h1>
+<!-- <h1> {{prediction}}</h1> -->
 {% endblock content %}
