--- a/templates/fertilizer_form_result.html
+++ b/templates/fertilizer_form_result.html
@@ -6,17 +6,17 @@
     <p style="color: #c79c60; font-size: 20px; font-family: 'Recursive', sans-serif;">
         Difference between desired value of N and your farm's N value is {{ diff_n }}</p>
     <p style="color: black; font-size: 20px; font-family: 'Recursive', sans-serif;">
-        <!-- {{ reponse1 }} -->
+        {{ response1 }}
     </p>
     <p style="color: #c79c60; font-size: 20px; font-family: 'Recursive', sans-serif;">
         Difference between desired value of P and your farm's P value is {{ diff_p }}</p>
     <p style="color: black; font-size: 20px; font-family: 'Recursive', sans-serif;">
-        <!-- {{ response2 }} -->
+        {{ response2 }}
     </p>
     <p style="color: #c79c60; font-size: 20px; font-family: 'Recursive', sans-serif;">
         Difference between desired value of K and your farm's K value is {{ diff_k }}</p>
     <p style="color: black; font-size: 20px; font-family: 'Recursive', sans-serif;">
-        <!-- {{ response3}} -->
+        {{ response3}}
     </p>
 </div>
 {% endblock content %}
