--- a/templates/base.html
+++ b/templates/base.html
@@ -87,23 +87,6 @@
 </div> -->
 <div class="page-wrapper">
 <header class="main-header">
-<!-- <div class="topbar">
-<div class="container">
-<div class="topbar__left">
-<div class="topbar__social">
-<a href="#" class="fab fa-facebook-square"></a>
-<a href="#" class="fab fa-twitter"></a>
-<a href="#" class="fab fa-pinterest-p"></a>
-<a href="#" class="fab fa-instagram"></a>
-</div>
-<p>Welcome to Agriculture HTML Template</p>
-</div>
-<div class="topbar__right">
-<a href="#"><i class="agrikon-icon-email"></i><span class="__cf_email__" data-cfemail="4a242f2f2e222f263a0a2925273a2b243364292527">[email&#160;protected]</span></a>
-<a href="#"><i class="agrikon-icon-clock"></i>Mon - Sat 8:00 - 6:30, Sunday - CLOSED</a>
-</div>
-</div>
-</div> -->
 <nav class="main-menu">
 <div class="container">
 <div class="logo-box">
@@ -122,17 +105,11 @@
 <li class="dropdown"><a href="crop_form">Crop</a></li>
 <li class="dropdown"><a href="fertilizer_form">Fertilizer</a></li>
 <li class="dropdown"><a href="plant_disease_form">Disease </a></li>
-<!-- <li>
-<a href="about.html">About</a>
-</li> -->
-<li class="dropdown"><a href="services">Features</a>
-<!-- <ul>
-<li><a href="services.html"></a></li>
-<li><a href="service-details.html">Service Details</a></li>
-<li><a href="contact.html"></a></li>
-</ul> -->
+
+<li class="dropdown"><a href="features">Features</a>
+
 </li>
-<li class="dropdown"><a href="j">Contact</a></li>
+<li class="dropdown"><a href="contact">Contact</a></li>
 <li class="dropdown"><a href="blog.html">News</a>
 <ul>
 <li><a href="blog.html">News</a></li>
@@ -158,6 +135,7 @@
 </header>
 
 {% block content %}
+
 {% endblock content %}
 
 <footer class="site-footer">
@@ -240,11 +218,12 @@
     </footer>
     <div class="bottom-footer">
     <div class="container">
-    <p>© Copyright 2020 by Company.com</p>
+    <p>© Copyright 2022</p>
     <div class="bottom-footer__links">
-    <a href="#">Terms & Conditions</a>
+    {% comment %} <a href="#">Terms & Conditions</a>
     <a href="#">Privacy Policy</a>
-    <a href="#">Sitemap</a>
+    <a href="#">Sitemap</a> {% endcomment %}
+    <p>Project By RISHI GUPTA, HARSH CHUDASAMA, and YASH BHANUSHALI.</p>
     </div>
     </div>
     </div>
