--- a/templates/plant_disease_form_result.html
+++ b/templates/plant_disease_form_result.html
@@ -4,8 +4,8 @@
 <div class="container py-2 mx-auto my-50 h-10 " style="margin: 9rem;">
     <div class="row">
         <div class="col-sm py-2 py-md-3">
-            <div class="card card-body" style="justify-content: center; background-color:blanchedalmond">
-              <p class="text-center" style="color: black; font-size: 22px;">{{ prediction }}</p>
+            <div class="card card-body" style="justify-content: center; background-color:blanchedalmond;background-image: url('https://www.thegreatcoursesdaily.com/wp-content/uploads/2017/12/can-plants-think_FeaturedThumb.jpg');background-size: cover;">
+              <p class="text-center" style="color: black; font-size: 22px; font-family:georgia ">{{ prediction }}</p>
             </div>
         </div>
     </div>
