--- a/templates/contact.html
+++ b/templates/contact.html
@@ -189,6 +189,7 @@
 						allowfullscreen=""
 						aria-hidden="false"
 						tabindex="0"
+						padding="30px !important"
 					></iframe>
 				</div>
 			</div>
