--- a/templates/base.html
+++ b/templates/base.html
@@ -102,12 +102,16 @@
 <ul>
 </ul>
 </li>
-<li class="dropdown"><a href="crop_form">Crop</a></li>
+<!-- <li class="dropdown"><a href="crop_form">Crop</a></li>
 <li class="dropdown"><a href="fertilizer_form">Fertilizer</a></li>
-<li class="dropdown"><a href="plant_disease_form">Disease </a></li>
+<li class="dropdown"><a href="plant_disease_form">Disease </a></li> -->
 
-<li class="dropdown"><a href="features">Features</a>
-
+<li class="dropdown" ><a href="index#features">Features</a>
+  <ul>
+    <li><a href="crop_form">Crop</a></li>
+    <li><a href="fertilizer_form">Fertilizer</a></li>
+    <li><a href="plant_disease_form">Disease</a></li>
+    </ul>
 </li>
 <li class="dropdown"><a href="contact">Contact</a></li>
 <li class="dropdown"><a href="blog.html">News</a>
