--- a/templates/plant_disease_form.html
+++ b/templates/plant_disease_form.html
@@ -25,7 +25,7 @@
             <input type="file" name="file" class="form-control-file" id="inputfile" onchange="preview_image(event)" style="font-weight: bold;margin:5px;">
             <br>
             <br>
-            <img id="output-image" class="rounded mx-auto d-block" style="margin:5px;"/>
+            <img id="output-image" class="rounded mx-auto d-block" style="margin:5px;width: 256px;height: min-content" />
             <button class="btn btn-lg btn-primary btn-block" type="submit" style="font-weight: bold;margin:8px; background-color:orange">Predict</button>
         
         
