--- a/templates/base.html
+++ b/templates/base.html
@@ -152,14 +152,15 @@
     <a href="index-2.html" class="footer-widget__Logo">
     <img src="{% static 'images/loader.png' %}" width="50" alt="">
     </a>
-    <p>SUBSCRIBE FOR NEWSLETTER
+
+    <!-- <p>SUBSCRIBE FOR NEWSLETTER
     </p>
     <form action="#" data-url="YOUR_MAILCHIMP_URL" class="mc-form">
     <input type="email" name="EMAIL" placeholder="Email Address">
     <button type="submit"><i class="agrikon-icon-right-arrow"></i></button>
-    </form>
+    </form> -->
     <div class="mc-form__response"></div>
-    <div class="footer__social">
+    <div class="footer__social" style="margin: 20px 0;">
     <a href="#" class="fab fa-facebook-square"></a>
     <a href="#" class="fab fa-twitter"></a>
     <!-- <a href="#" class="fab fa-pinterest-p"></a> -->
