--- a/templates/base.html
+++ b/templates/base.html
@@ -115,11 +115,12 @@
 </li>
 <li class="dropdown"><a href="contact">Contact</a></li>
 <li class="dropdown"><a href="blog.html">News</a>
-<ul>
-<li><a href="blog.html">News</a></li>
-<li><a href="blog-details.html">News Details</a></li>
-</ul>
+  <ul>
+    <li><a href="blog.html">News</a></li>
+    <li><a href="blog-details.html">News Details</a></li>
+  </ul>
 </li>
+<li class="dropdown"><a href="contact">Shop</a></li>
 </ul>
 
 <div class="main-header__info">
