--- a/templates/index.html
+++ b/templates/index.html
@@ -91,59 +91,9 @@
 </div>
 </div>
 </section>
-<!-- <section class="about-one">
-<img src="{% static 'images/icons/about-bg-icon-1-1.png' %}" class="about-one__bg-shape-1" alt="">
-<div class="container">
-<div class="row">
-<div class="col-lg-5">
-<div class="about-one__images">
-<img src="{% static 'images/resources/about-1-1.jpg' %}" alt="">
-<img src="{% static 'images/resources/about-1-2.jpg' %}" alt="">
-<div class="about-one__count wow fadeInLeft" data-wow-duration="1500ms">
-<span>Trusted by</span>
-<h4>8900</h4>
-</div>
-</div>
-</div>
-<div class="col-lg-7">
-<div class="about-one__content">
-<div class="block-title text-left">
-<div class="block-title__image"></div>
-<p>Welcome to agricon</p>
-<h3>Better Agriculture for
-Better Future</h3>
-</div>
-<div class="about-one__tagline">
-<p>We have 30 years of agriculture & eco farming experience globaly</p>
-</div>
-<div class="about-one__summery">
-<p>There are many variations of passages of lorem ipsum available but the majority have suffered
-alteration in some form by injected humor or random word which don't look even.</p>
-</div>
-<div class="about-one__icon-row">
-<div class="row">
-<div class="col-lg-6">
-<div class="about-one__box">
-<i class="agrikon-icon-farmer"></i>
-<h4><a href="about.html">Professional
-Farmers</a></h4>
-</div>
-</div>
-<div class="col-lg-6">
-<div class="about-one__box">
-<i class="agrikon-icon-agriculture"></i>
-<h4><a href="services.html">Organic & Eco
-Solutions</a></h4>
-</div>
-</div>
-</div>
-</div>
-<a href="about.html" class="thm-btn">Discover More</a>
-</div>
-</div>
-</div>
-</div>
-</section> -->
+<br>
+<br>
+
 <section class="service-two">
 <div class="service-two__bottom-curv"></div>
 <div class="container" id="features">
@@ -206,113 +156,51 @@ Solutions</a></h4>
 </div>
 </div>
 </div>
-<!-- <div class="col-sm-12 col-md-6 col-lg-3">
-<div class="service-two__card">
-<div class="service-two__card-image">
-<img src="{% static 'images/services/service-2-4.jpg' %}" alt="">
-</div>
-<div class="service-two__card-content">
-<div class="service-two__card-icon">
-<i class="agrikon-icon-dairy"></i>
-</div>
-<h3><a href="service-details.html">Dairy
-Products</a></h3>
-<p>Lorem ium dolor sit ametad pisicing elit sed simply do ut.</p>
 </div>
 </div>
-</div> -->
-</div>
-</div>
+
 </section>
-<!-- <div class="projects-one project-one__home-one">
-<div class="container">
-<div class="block-title text-center">
-<div class="block-title__image"></div>
-<p>Closed projects</p>
-<h3>Latest Projects List</h3>
-</div>
-<div class="thm-swiper__slider swiper-container" data-swiper-options='{"spaceBetween": 0, "slidesPerView": 1, "loop": true, "slidesPerGroup": 1, "pagination": {
-            "el": "#projects-one__swiper-pagination",
-            "type": "bullets",
-            "clickable": true
-        },
-        "breakpoints": {
-            "0": {
-                "spaceBetween": 0,
-                "slidesPerView": 1,
-                "slidesPerGroup": 1
-            },
-            "640": {
-                "spaceBetween": 30,
-                "slidesPerView": 2,
-                "slidesPerGroup": 2
-            },
-            "992": {
-                "spaceBetween": 30,
-                "slidesPerView": 2,
-                "slidesPerGroup": 2
-            }
-        }}'>
-<div class="swiper-wrapper">
-<div class="swiper-slide">
-<div class="projects-one__single">
-<img src="{% static 'images/projects/project-2-1.jpg' %}" alt="">
-<div class="projects-one__content">
-<h3>Harvest Innovation</h3>
-<a href="project-details.html" class="projects-one__button"><i class="agrikon-icon-right-arrow"></i></a>
-</div>
-</div>
-</div>
-<div class="swiper-slide">
-<div class="projects-one__single">
-<img src="{% static 'images/projects/project-2-2.jpg' %}" alt="">
-<div class="projects-one__content">
-<h3>Harvest Innovation</h3>
-<a href="project-details.html" class="projects-one__button"><i class="agrikon-icon-right-arrow"></i></a>
-</div>
-</div>
-</div>
-<div class="swiper-slide">
-<div class="projects-one__single">
-<img src="{% static 'images/projects/project-2-3.jpg' %}" alt="">
-<div class="projects-one__content">
-<h3>Harvest Innovation</h3>
-<a href="project-details.html" class="projects-one__button"><i class="agrikon-icon-right-arrow"></i></a>
-</div>
-</div>
-</div>
-<div class="swiper-slide">
-<div class="projects-one__single">
-<img src="{% static 'images/projects/project-2-4.jpg' %}" alt="">
-<div class="projects-one__content">
-<h3>Harvest Innovation</h3>
-<a href="project-details.html" class="projects-one__button"><i class="agrikon-icon-right-arrow"></i></a>
-</div>
-</div>
-</div>
-<div class="swiper-slide">
-<div class="projects-one__single">
-<img src="{% static 'images/projects/project-2-2.jpg' %}" alt="">
-<div class="projects-one__content">
-<h3>Harvest Innovation</h3>
-<a href="project-details.html" class="projects-one__button"><i class="agrikon-icon-right-arrow"></i></a>
-</div>
-</div>
-</div>
-<div class="swiper-slide">
-<div class="projects-one__single">
-<img src="{% static 'images/projects/project-2-4.jpg' %}" alt="">
-<div class="projects-one__content">
-<h3>Harvest Innovation</h3>
-<a href="project-details.html" class="projects-one__button"><i class="agrikon-icon-right-arrow"></i></a>
-</div>
-</div>
-</div>
-</div>
-<div class="swiper-pagination" id="projects-one__swiper-pagination"></div>
-</div>
-</div>
-</div> -->
+
+
+<section class="service-one" >
+    <div class="container">
+        <div class="block-title text-center">
+   
+            <h3>Shop Now !!!</h3>
+            </div>
+    <div class="row" style="display: flex;justify-content: space-evenly;">
+    
+    <div class="col-md-12 col-lg-4" >
+        <div class="blog-card">
+        <div class="blog-card__image">
+        <img src="{% static 'images_form/npk.jpg' %}" alt="NPK Detector">
+        <a href="https://www.aliexpress.com/item/1005002859964410.html?spm=a2g0o.productlist.0.0.322027c0avbPRM&algo_pvid=02f08557-c4ab-4c3a-85a8-7677fb882b0a&algo_exp_id=02f08557-c4ab-4c3a-85a8-7677fb882b0a-10&pdp_ext_f=%7B%22sku_id%22%3A%2212000022494089228%22%7D&pdp_pi=-1%3B9062.41%3B-1%3B-1%40salePrice%3BINR%3Bsearch-mainSearch"></a>
+        </div>
+        <div class="blog-card__content">
+        <div class="blog-card__date">NPK Detector</div>
+        <h3><a href="https://www.aliexpress.com/item/1005002859964410.html?spm=a2g0o.productlist.0.0.322027c0avbPRM&algo_pvid=02f08557-c4ab-4c3a-85a8-7677fb882b0a&algo_exp_id=02f08557-c4ab-4c3a-85a8-7677fb882b0a-10&pdp_ext_f=%7B%22sku_id%22%3A%2212000022494089228%22%7D&pdp_pi=-1%3B9062.41%3B-1%3B-1%40salePrice%3BINR%3Bsearch-mainSearch">Want to measure NPK value of soil</a></h3>
+        <a href="https://www.aliexpress.com/item/1005002859964410.html?spm=a2g0o.productlist.0.0.322027c0avbPRM&algo_pvid=02f08557-c4ab-4c3a-85a8-7677fb882b0a&algo_exp_id=02f08557-c4ab-4c3a-85a8-7677fb882b0a-10&pdp_ext_f=%7B%22sku_id%22%3A%2212000022494089228%22%7D&pdp_pi=-1%3B9062.41%3B-1%3B-1%40salePrice%3BINR%3Bsearch-mainSearch" class="thm-btn">Buy Now</a>
+        </div>
+        </div>
+        </div>
+        <div class="col-md-12 col-lg-4">
+            <div class="blog-card">
+            <div class="blog-card__image">
+            <img src="{% static 'images_form/ph_detector.jpg' %}" alt="PH Detector">
+            <a href="https://meesho.com/Soil%20Tester%203-in-1%20Soil%20Moisture,%20pH%20Meter%20Test%20Kit%20with%20Light%20pH%20Acidity%20Detector%20Analyzer%20for%20Indoor%20Outdoor%20Garden%20Farm%20Lawn%20Plants%20Flower,%20Solar%20Soil%20Plant%20Care%20Sensor/p/WZKOF?utm_campaign=Web_Smart_Shopping_ROAS_Home_Kitchen_India_Jan22&utm_adgroup=Ad_Group&campaignid=15791572479&adgroupid=131861404277&keyword=&device=c&gclid=EAIaIQobChMI2aW8na7S9gIVm4NLBR1CTgkcEAQYAiABEgJbhvD_BwE"></a>
+            </div>
+            <div class="blog-card__content">
+            <div class="blog-card__date">PH Detector</div>
+            <h3><a href="https://meesho.com/Soil%20Tester%203-in-1%20Soil%20Moisture,%20pH%20Meter%20Test%20Kit%20with%20Light%20pH%20Acidity%20Detector%20Analyzer%20for%20Indoor%20Outdoor%20Garden%20Farm%20Lawn%20Plants%20Flower,%20Solar%20Soil%20Plant%20Care%20Sensor/p/WZKOF?utm_campaign=Web_Smart_Shopping_ROAS_Home_Kitchen_India_Jan22&utm_adgroup=Ad_Group&campaignid=15791572479&adgroupid=131861404277&keyword=&device=c&gclid=EAIaIQobChMI2aW8na7S9gIVm4NLBR1CTgkcEAQYAiABEgJbhvD_BwE">Want to measure PH value of soil</a></h3>
+            <a href="https://meesho.com/Soil%20Tester%203-in-1%20Soil%20Moisture,%20pH%20Meter%20Test%20Kit%20with%20Light%20pH%20Acidity%20Detector%20Analyzer%20for%20Indoor%20Outdoor%20Garden%20Farm%20Lawn%20Plants%20Flower,%20Solar%20Soil%20Plant%20Care%20Sensor/p/WZKOF?utm_campaign=Web_Smart_Shopping_ROAS_Home_Kitchen_India_Jan22&utm_adgroup=Ad_Group&campaignid=15791572479&adgroupid=131861404277&keyword=&device=c&gclid=EAIaIQobChMI2aW8na7S9gIVm4NLBR1CTgkcEAQYAiABEgJbhvD_BwE" class="thm-btn">Buy Now</a>
+            </div>
+            </div>
+            </div>
+    </div>
+    </div>
+    </section>
+
+
 <section class="call-to-action__three jarallax" data-jarallax data-speed="0.3" data-imgPosition="50% 50%">
 <img class="call-to-action__three__bg jarallax-img" src="{% static 'images/backgrounds/cta-1-bg-1.jpg' %}" alt="parallax-image" />
 <div class="container">
@@ -332,94 +220,9 @@ Products</a></h3>
 </div>
 </div>
 </section>
-<!-- <section class="testimonials-one">
-<img src="{% static 'images/icons/testimonials-bg-1-1.png' %}" class="testimonials-one__bg" alt="">
-<div class="container">
-<h2 class="testimonials-one__title">Testimonials</h2>
-<div id="testimonials-one__carousel" class="testimonials-one__carousel swiper-container">
-<div class="swiper-wrapper">
-<div class="swiper-slide">
-<div class="testimonials-one__icons">
-<i class="fas fa-star"></i>
-<i class="fas fa-star"></i>
-<i class="fas fa-star"></i>
-<i class="fas fa-star"></i>
-<i class="fas fa-star"></i>
-</div>
-<p>This is due to their excellent service, competitive pricing and customer support. It’s throughly
-refresing to get such a personal touch. Duis aute lorem ipsum is simply free text irure dolor in
-reprehenderit in esse nulla pariatur.</p>
-</div>
-<div class="swiper-slide">
-<div class="testimonials-one__icons">
-<i class="fas fa-star"></i>
-<i class="fas fa-star"></i>
-<i class="fas fa-star"></i>
-<i class="fas fa-star"></i>
-<i class="fas fa-star"></i>
-</div>
-<p>This is due to their excellent service, competitive pricing and customer support. It’s throughly
-refresing to get such a personal touch. Duis aute lorem ipsum is simply free text irure dolor in
-reprehenderit in esse nulla pariatur.</p>
-</div>
-<div class="swiper-slide">
-<div class="testimonials-one__icons">
-<i class="fas fa-star"></i>
-<i class="fas fa-star"></i>
-<i class="fas fa-star"></i>
-<i class="fas fa-star"></i>
-<i class="fas fa-star"></i>
-</div>
-<p>This is due to their excellent service, competitive pricing and customer support. It’s throughly
-refresing to get such a personal touch. Duis aute lorem ipsum is simply free text irure dolor in
-reprehenderit in esse nulla pariatur.</p>
-</div>
-</div>
-</div>
-<div id="testimonials-one__thumb" class="swiper-container">
-<div class="swiper-wrapper">
-<div class="swiper-slide">
-<div class="testimonials-one__image">
-<img src="{% static 'images/resources/testimonials-1-1.jpg' %}" alt="">
-</div>
-</div>
-<div class="swiper-slide">
-<div class="testimonials-one__image">
-<img src="{% static 'images/resources/testimonials-1-2.jpg' %}" alt="">
-</div>
-</div>
-<div class="swiper-slide">
-<div class="testimonials-one__image">
-<img src="{% static 'images/resources/testimonials-1-3.jpg' %}" alt="">
-</div>
-</div>
-</div>
-</div>
-<div id="testimonials-one__meta" class="testimonials-one__carousel swiper-container">
-<div class="swiper-wrapper">
-<div class="swiper-slide">
-<div class="testimonials-one__meta">
-<h4>Jessica Brown</h4>
-<span>Customer</span>
- </div>
-</div>
-<div class="swiper-slide">
-<div class="testimonials-one__meta">
-<h4>Caleb Hoffman</h4>
-<span>Customer</span>
-</div>
-</div>
-<div class="swiper-slide">
-<div class="testimonials-one__meta">
-<h4>Bradley Kim</h4>
-<span>Customer</span>
-</div>
-</div>
-</div>
-</div>
-<div class="swiper-pagination" id="testimonials-one__swiper-pagination"></div>
-</div>
-</section> -->
+
+
+
 <section class="gray-boxed-wrapper home-one__boxed">
 <img src="{% static 'images/icons/home-1-blog-bg.png' %}" alt="" class="home-one__boxed-bg">
 <div class="blog-home-two blog-home-one">
@@ -432,12 +235,6 @@ reprehenderit in esse nulla pariatur.</p>
 <h3>Latest News & Articles Directly from Blog</h3>
 </div>
 </div>
-<!-- <div class="col-lg-6">
-<p class="block-text">Lorem ipsum is simply free text available. Aenean eu leo quam. Pellentesque
-ornare
-sem lacinia
-quam venenatis vestibulum. Aenean lacinia bibendum nulla sed consectetur.</p>
-</div> -->
 </div>
 <div class="row">
 <div class="col-md-12 col-lg-4">
@@ -495,28 +292,10 @@ quam venenatis vestibulum. Aenean lacinia bibendum nulla sed consectetur.</p>
 <hr />
 </div>
 </div>
-<!-- <div class="blog-home__slogan">
-<div class="container">
-<div class="row">
-<div class="col-lg-9">
-<div class="blog-home__slogan-main">
-<i class="agrikon-icon-farm"></i>
-<div class="blog-home__slogan-content">
-<h3>We Care About Our Agriculture Growth</h3>
-<p>There are many variations of passages of Lorem Ipsum available, but the majority have
-suffered in some form, by injected humour words.</p>
-</div>
-</div>
-</div>
-<div class="col-lg-3">
-<div class="blog-home__slogan-image">
-<img src="{% static 'images/resources/blog-cta-1.png' %}" alt="">
-</div>
-</div>
-</div>
-</div>
-</div> -->
+
 </section>
+
+
 <section class="contact-two">
 <div class="container">
 <div class="row">
@@ -537,10 +316,6 @@ suffered in some form, by injected humour words.</p>
 Message</h3>
 </div>
 <div class="contact-two__summery">
-<!-- <p>Lorem ipsum dolor sit amet, consectetur notted adipisicing elit sed do eiusmod tempor
-incididunt
-ut labore et dolore magna aliqua lonm andhn. Aenean tincidunt id mauris id auctor. Donec at
-ligula lacus dignissim mi quis simply neque.</p> -->
 </div>
 </div>
 </div>
@@ -568,99 +343,7 @@ ligula lacus dignissim mi quis simply neque.</p> -->
 </div>
 </div>
 </section>
-<!-- <div class="client-carousel client-carousel__has-border-top">
-<div class="container">
-<div class="thm-swiper__slider swiper-container" data-swiper-options='{"spaceBetween": 140, "slidesPerView": 5, "autoplay": { "delay": 5000 }, "breakpoints": {
-                "0": {
-                    "spaceBetween": 30,
-                    "slidesPerView": 2
-                },
-                "375": {
-                    "spaceBetween": 30,
-                    "slidesPerView": 2
-                },
-                "575": {
-                    "spaceBetween": 30,
-                    "slidesPerView": 3
-                },
-                "767": {
-                    "spaceBetween": 50,
-                    "slidesPerView": 4
-                },
-                "991": {
-                    "spaceBetween": 50,
-                    "slidesPerView": 5
-                },
-                "1199": {
-                    "spaceBetween": 100,
-                    "slidesPerView": 5
-                }
-            }}'>
-<div class="swiper-wrapper">
-<div class="swiper-slide">
-<img src="{% static 'images/resources/brand-1-1.png' %}" alt="">
-</div>
-<div class="swiper-slide">
-<img src="{% static 'images/resources/brand-1-1.png' %}" alt="">
-</div>
-<div class="swiper-slide">
-<img src="{% static 'images/resources/brand-1-1.png' %}" alt="">
-</div>
-<div class="swiper-slide">
-<img src="{% static 'images/resources/brand-1-1.png' %}" alt="">
-</div>
-<div class="swiper-slide">
-<img src="{% static 'images/resources/brand-1-1.png' %}" alt="">
-</div>
-<div class="swiper-slide">
-<img src="{% static 'images/resources/brand-1-1.png' %}" alt="">
-</div>
-<div class="swiper-slide">
-<img src="{% static 'images/resources/brand-1-1.png' %}" alt="">
-</div>
-<div class="swiper-slide">
-<img src="{% static 'images/resources/brand-1-1.png' %}" alt="">
-</div>
-<div class="swiper-slide">
-<img src="{% static 'images/resources/brand-1-1.png' %}" alt="">
-</div>
-<div class="swiper-slide">
-<img src="{% static 'images/resources/brand-1-1.png' %}" alt="">
-</div>
-<div class="swiper-slide">
-<img src="{% static 'images/resources/brand-1-1.png' %}" alt="">
-</div>
-<div class="swiper-slide">
-<img src="{% static 'images/resources/brand-1-1.png' %}" alt="">
-</div>
-<div class="swiper-slide">
-<img src="{% static 'images/resources/brand-1-1.png' %}" alt="">
-</div>
-<div class="swiper-slide">
-<img src="{% static 'images/resources/brand-1-1.png' %}" alt="">
-</div>
-<div class="swiper-slide">
-<img src="{% static 'images/resources/brand-1-1.png' %}" alt="">
-</div>
-<div class="swiper-slide">
-<img src="{% static 'images/resources/brand-1-1.png' %}" alt="">
-</div>
-<div class="swiper-slide">
-<img src="{% static 'images/resources/brand-1-1.png' %}" alt="">
-</div>
-<div class="swiper-slide">
-<img src="{% static 'images/resources/brand-1-1.png' %}" alt="">
-</div>
-<div class="swiper-slide">
-<img src="{% static 'images/resources/brand-1-1.png' %}" alt="">
-</div>
-<div class="swiper-slide">
-<img src="{% static 'images/resources/brand-1-1.png' %}" alt="">
-</div>
-</div>
-</div>
-</div>
-</div> -->
+
 
 <div class="mobile-nav__wrapper">
 <div class="mobile-nav__overlay mobile-nav__toggler"></div>
