--- a/templates/base.html
+++ b/templates/base.html
@@ -114,7 +114,7 @@
     </ul>
 </li>
 <li class="dropdown"><a href="contact">Contact</a></li>
-<li class="dropdown"><a href="blog.html">News</a>
+<li class="dropdown"><a href="news">News</a>
   <ul>
     <li><a href="blog.html">News</a></li>
     <li><a href="blog-details.html">News Details</a></li>
