--- a/templates/index.html
+++ b/templates/index.html
@@ -296,7 +296,7 @@
 </section>
 
 
-<section class="contact-two">
+<section class="contact-two" id="contact">
 <div class="container">
 <div class="row">
 <div class="col-sm-12 col-md-12 col-lg-12 col-xl-5">
