--- a/templates/base.html
+++ b/templates/base.html
@@ -113,7 +113,7 @@
     <li><a href="plant_disease_form">Disease</a></li>
     </ul>
 </li>
-<li class="dropdown"><a href="contact">Contact</a></li>
+<li class="dropdown"><a href="index#contact">Contact</a></li>
 <li class="dropdown"><a href="news">News</a>
   <ul>
     <li><a href="blog.html">News</a></li>
