--- a/templates/base.html
+++ b/templates/base.html
@@ -2,8 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from ninetheme.com/themes/html-templates/agrikon/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 10 Aug 2021 16:54:14 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
     <title>Agro-Predict</title>
     <meta charset="UTF-8" />
@@ -82,9 +81,6 @@
 </head>
 <body>
 
-<!-- <div class="preloader">
-<img class="preloader__image" width="55" src="{% static 'images/loader.png' %}" alt="">
-</div> -->
 <div class="page-wrapper">
 <header class="main-header">
 <nav class="main-menu">
@@ -100,11 +96,9 @@
 <li class="dropdown">
 <a href="index">Home</a>
 <ul>
+
 </ul>
 </li>
-<!-- <li class="dropdown"><a href="crop_form">Crop</a></li>
-<li class="dropdown"><a href="fertilizer_form">Fertilizer</a></li>
-<li class="dropdown"><a href="plant_disease_form">Disease </a></li> -->
 
 <li class="dropdown" ><a href="index#features">Features</a>
   <ul>
@@ -114,23 +108,17 @@
     </ul>
 </li>
 <li class="dropdown"><a href="index#contact">Contact</a></li>
-<li class="dropdown"><a href="news">News</a>
-  <ul>
-    <li><a href="blog.html">News</a></li>
-    <li><a href="blog-details.html">News Details</a></li>
-  </ul>
-</li>
+<li class="dropdown"><a href="news">News</a> </li>
 <li class="dropdown"><a href="index#shop">Shop</a></li>
 </ul>
 
 <div class="main-header__info">
-<!-- <a href="#" class="search-toggler main-header__search-btn"><i class="agrikon-icon-magnifying-glass"></i></a>
-<a class="main-header__cart-btn" href="#"><i class="agrikon-icon-shopping-cart"></i></a> -->
+
 <a href="tel:92-666-888-0000" class="main-header__info-phone">
 <i class="agrikon-icon-phone-call"></i>
 <span class="main-header__info-phone-content">
 <span class="main-header__info-phone-text">Call if any query</span>
-<span class="main-header__info-phone-title">91 000 000 0000</span>
+<span class="main-header__info-phone-title">91 808 203 6628</span>
 </span>
 </a>
 </div>
@@ -138,16 +126,8 @@
 </nav>
 
 </header>
-{% if messages %} {% for message in messages %}
-	<div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert" style="margin:0">
-		{{ message }}
-		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-			<span aria-hidden="true">&times;</span>
-		</button>
-	</div>
-	{% endfor %} {% endif %}
-{% block content %}
 
+{% block content %}
 {% endblock content %}
 
 <footer class="site-footer" style="margin:0">
@@ -161,12 +141,7 @@
     <img src="{% static 'images/loader.png' %}" width="50" alt="">
     </a>
 
-    <!-- <p>SUBSCRIBE FOR NEWSLETTER
-    </p>
-    <form action="#" data-url="YOUR_MAILCHIMP_URL" class="mc-form">
-    <input type="email" name="EMAIL" placeholder="Email Address">
-    <button type="submit"><i class="agrikon-icon-right-arrow"></i></button>
-    </form> -->
+  
     <div class="mc-form__response"></div>
     <div class="footer__social" style="margin: 20px 0;">
     <a href="#" class="fab fa-facebook-square"></a>
@@ -176,18 +151,7 @@
     </div>
     </div>
     </div>
-    <!-- <div class="col-sm-12 col-md-6 col-lg-6 col-xl-2">
-    <div class="footer-widget footer-widget__links-widget">
-    <h3 class="footer-widget__title">Links</h3>
-    <ul class="list-unstyled footer-widget__links">
-    <li><a href="#">Our Projects</a></li>
-    <li><a href="#">About us</a></li>
-    <li><a href="#">New Campaign</a></li>
-    <li><a href="#">Upcoming Events</a></li>
-    <li><a href="#">Volunteers</a></li>
-    </ul>
-    </div>
-    </div> -->
+
     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4">
     <div class="footer-widget">
     <h3 class="footer-widget__title">News</h3>
