--- a/templates/base.html
+++ b/templates/base.html
@@ -125,10 +125,15 @@
 </div>
 </nav>
 
+
+
 </header>
+
+
 
 {% block content %}
 {% endblock content %}
+
 
 <footer class="site-footer" style="margin:0">
     <img src="{% static 'images/icons/footer-bg-icon-1.png' %}" class="site-footer__shape-1" alt="">
@@ -205,3 +210,71 @@
     </div>
     </div>
     </div>
+
+    <div class="mobile-nav__wrapper">
+      <div class="mobile-nav__overlay mobile-nav__toggler"></div>
+  
+      <div class="mobile-nav__content">
+          <span class="mobile-nav__close mobile-nav__toggler"><i class="far fa-times"></i></span>
+          <div class="logo-box">
+              <a href="index" aria-label="logo image"><img src="{% static 'images/loader.png' %}" width="50" alt="" /></a>
+          </div>
+  
+          <div class="mobile-nav__container"></div>
+  
+          <ul class="mobile-nav__contact list-unstyled">
+              <li>
+                  <i class="agrikon-icon-email"></i>
+                  <a href="https://ninetheme.com/cdn-cgi/l/email-protection#57393232333f323b27173630253e3c38397934383a"><span
+                          class="__cf_email__"
+                          data-cfemail="fa949f9f9e929f968aba9b9d8893919594d4999597">[email&#160;protected]</span></a>
+              </li>
+              <li>
+                  <i class="agrikon-icon-telephone"></i>
+                  <a href="tel:666-888-0000">808 203 6628</a>
+              </li>
+          </ul>
+          <div class="mobile-nav__top">
+  
+              <div class="mobile-nav__social">
+                  <a href="#" aria-label="twitter"><i class="fab fa-twitter"></i></a>
+                  <a href="#" aria-label="facebook"><i class="fab fa-facebook-square"></i></a>
+                  <a href="#" aria-label="pinterest"><i class="fab fa-pinterest-p"></i></a>
+                  <a href="#" aria-label="instagram"><i class="fab fa-instagram"></i></a>
+              </div>
+          </div>
+      </div>
+  
+  </div>
+  
+
+  
+  
+
+    <a href="#" data-target="html" class="scroll-to-target scroll-to-top"><i class="fa fa-angle-up"></i></a>
+
+<script data-cfasync="false"
+    src="{% static '../../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js' %}"></script>
+<script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
+<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static 'js/swiper.min.js' %}"></script>
+<script src="{% static 'js/jquery.ajaxchimp.min.js' %}"></script>
+<script src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>
+<script src="{% static 'js/jquery.validate.min.js' %}"></script>
+<script src="{% static 'js/bootstrap-select.min.js' %}"></script>
+<script src="{% static 'js/wow.js' %}"></script>
+<script src="{% static 'js/odometer.min.js' %}"></script>
+<script src="{% static 'js/jquery.appear.min.js' %}"></script>
+<script src="{% static 'js/jarallax.min.js.map' %}"></script>
+<script src="{% static 'js/circle-progress.min.js' %}"></script>
+<script src="{% static 'js/wNumb.min.js' %}"></script>
+<script src="{% static 'js/nouislider.min.js' %}"></script>
+
+<script src="{% static 'js/theme.js' %}"></script>
+<script defer src="{% static '../../../../static.cloudflareinsights.com/beacon.min.js' %}"
+    data-cf-beacon='{"rayId":"67cabeb1fabe0dd8","version":"2021.7.0","r":1,"token":"72b2ec455a104aa0b3ca4230f1da2518","si":10}'></script>
+  
+
+</body>
+
+</html>
