fertilizer drop down added

--- a/templates/base.html
+++ b/templates/base.html
@@ -114,7 +114,7 @@
 
 <div class="main-header__info">
 
-<a href="tel:92-666-888-0000" class="main-header__info-phone">
+<a href="tel:91-808-203-6629" class="main-header__info-phone">
 <i class="agrikon-icon-phone-call"></i>
 <span class="main-header__info-phone-content">
 <span class="main-header__info-phone-text">Call if any query</span>
@@ -183,11 +183,11 @@
     <ul class="list-unstyled footer-widget__contact">
     <li>
     <i class="agrikon-icon-telephone"></i>
-    <a href="tel:666-888-0000">999 444 0000</a>
+    <a href="tel:808-203-6629">808 203 6628</a>
     </li>
     <li>
     <i class="agrikon-icon-email"></i>
-    <a href="#"><span class="__cf_email__" data-cfemail="d3bdb6b6b7bbb6bfa393b0bcbea3b2bdaafdb0bcbe">[email&#160;protected]</span></a>
+    <a href="mailto: harsh.chudasama@somaiya.edu"><span class="__cf_email__">harsh.chudasama@somaiya.edu</span></a>
     </li>
     <li>
     <i class="agrikon-icon-pin"></i>
@@ -200,7 +200,6 @@
     </footer>
     <div class="bottom-footer">
     <div class="container">
-    <p>© Copyright 2022</p>
     <div class="bottom-footer__links">
     {% comment %} <a href="#">Terms & Conditions</a>
     <a href="#">Privacy Policy</a>
@@ -225,13 +224,13 @@
           <ul class="mobile-nav__contact list-unstyled">
               <li>
                   <i class="agrikon-icon-email"></i>
-                  <a href="https://ninetheme.com/cdn-cgi/l/email-protection#57393232333f323b27173630253e3c38397934383a"><span
+                  <a href="mailto: harsh.chudasama@somaiya.edu"><span
                           class="__cf_email__"
-                          data-cfemail="fa949f9f9e929f968aba9b9d8893919594d4999597">[email&#160;protected]</span></a>
+                          data-cfemail="fa949f9f9e929f968aba9b9d8893919594d4999597">harsh.chudasama@somaiya.edu</span></a>
               </li>
               <li>
                   <i class="agrikon-icon-telephone"></i>
-                  <a href="tel:666-888-0000">808 203 6628</a>
+                  <a href="tel:808-203-6629">808 203 6628</a>
               </li>
           </ul>
           <div class="mobile-nav__top">
