--- a/templates/fertilizer_form.html
+++ b/templates/fertilizer_form.html
@@ -15,8 +15,48 @@
               class="wrap-input2 validate-input"
               data-validate="Valid email is required: ex@abc.xyz"
             >
-              <input class="input2" type="text"  id="crop" name="crop" required/>
-              <span class="focus-input2" data-placeholder="Crop you want to grow"></span>
+              <!-- <input class="input2" type="text"  id="crop" name="crop" required/>
+              <span class="focus-input2" data-placeholder="Crop you want to grow"></span> -->
+              <label for="crop" class="input2" style="font-family: Poppins-Regular;">Crop you want to grow</label>
+      <select
+        id="crop"
+        name="crop"
+        class="form-control"
+        style="font-weight: 200; color: #555555;border: none;"
+        required
+      >
+      <option value="apple">Apple</option>
+      <option value="banana">banana</option>
+      <option value="blackgram">blackgram</option>
+      <option value="chickpea">chickpea</option>
+      <option value="coconut">coconut</option>
+      <option value="coffee">coffee</option>
+      <option value="cotton">cotton</option>
+      <option value="Grapes">Grapes</option>
+      <option value="groundnut">groundnut</option>
+      <option value="Jute">Jute</option>
+      <option value="kidneybeans">kidneybeans</option>
+      <option value="lentil">lentil</option>
+      <option value="maize">maize</option>
+      <option value="mango">Mango</option>
+      <option value="mothbeans">mothbeans</option>
+      <option value="mungbean">mungbean</option>
+      <option value="muskmelon">muskmelon</option>
+      <option value="mustard">mustard</option>
+      <option value="orange">orange</option>
+      <option value="paddy">paddy</option>
+      <option value="papaya">papaya</option>
+      <option value="pearlmillet">pearlmillet</option>
+      <option value="pigeonpea">pigeonpea</option>
+      <option value="pomegranate">pomegranate</option>
+      <option value="rapeseed">rapeseed</option>
+      <option value="rice">rice</option>
+      <option value="sorghum">sorghum</option>
+      <option value="sugarcane">sugarcane</option>
+      <option value="watermelon">watermelon</option>
+      <option value="wheat">wheat</option>
+
+    </select>
             </div>
             <div
               class="wrap-input2 validate-input"
